test/sparse/bradc/denseIRV.good
denseIRV.chpl:4: error: unresolved call ':[domain(2,int,0)] int.IRV() = :int'
